# workforest

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: PHASE_1_PLAN.md  PHASE_2_IMPL_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_3_PLAN_REVIEW_AMP.md  PHASE_5A_PLAN.md  PHASE_5B_PLAN.md  PHASE_5_REVIEW_AMP.md  PHASE_5_REVIEW_HUMAN_AMP.md  agent-instructions.md  architecture-decisions.md
docs/archive/: PHASE_2_PLAN.md  PHASE_4_PLAN.md  PHASE_6_PLAN.md  PHASE_CONTRACTS_2_PLAN.md  architecture-decisions.md  claude-web-init.md
docs/decisions/: 0001-agent-drivable-first.md  0002-functional-core-imperative-shell.md  0003-plan-execute-split.md  0004-forest-meta-self-contained.md  0005-one-repo-type.md  0006-single-config-file.md  0007-e2e-tests-with-real-git-repos.md  0008-contract-driven-development.md  0009-best-effort-error-accumulation.md  0010-debug-assertions-for-invariants.md  0011-incremental-meta-writing.md  0012-forests-template-agnostic-after-creation.md  0013-rust-language-choice.md  0014-xdg-config-paths.md  ADR_INDEX.md
src/: channel.rs  cli.rs  commands.rs  config.rs  forest.rs  git.rs  lib.rs  main.rs  meta.rs  paths.rs  testutil.rs  version_check.rs
src/commands/: branch_state.rs  exec.rs  init.rs  ls.rs  mod.rs  new.rs  reset.rs  rm.rs  status.rs
stm/: README.md
stm/future/: branch-metadata-drift.md  ci-worker-deploy.md  (+3 more)
tests/: cli_test.rs
worker/: .env.template  package-lock.json  package.json  schema.sql  wrangler.toml  wrangler.toml.template
(+49 files in other folders)
