[package]
name = "git-forest"
version = "0.2.17"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "3", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["stable"]
stable = []
beta = []

[[bin]]
name = "git-forest"
path = "src/bin/git-forest.rs"
required-features = ["stable"]

[[bin]]
name = "git-forest-beta"
path = "src/bin/git-forest-beta.rs"
required-features = ["beta"]

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"
serial_test = "3"
tempfile = "3"
ts-rs = "10"
